<resources>
    <string name="app_name">Pertemuan 03</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="ket_bank">PT Bank Sephora Indonesia ("Bank Sephora") telah berlisensi oleh Bank Indonsia dan diawasi oleh Otoritas Jasa Keuangan (OJK) serta merupakan peserta dari Lembaga Penjamin Simpanan (LPS).</string>
    <string name="info_akun">Informasi Akun</string>
    <string name="detail_akun">Masukkan informasi mengenai akun mobile banking Sephora Anda.</string>
    <string name="rekening">No. Rekening</string>
    <string name="IDpengguna">Id Pengguna</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="kata_sandi_fix">Konfirmasi Kata Sandi</string>
    <string name="selanjutnya">Selanjutnya</string>
</resources>