<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AktivasiAkun">

    <androidx.cardview.widget.CardView
        android:layout_width="335dp"
        android:layout_height="554dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingLeft="20dp">

            <RelativeLayout
                android:id="@+id/kotakInfoAkun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp">

                <FrameLayout
                    android:id="@+id/logoAktivasiAkun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="40dp"
                    android:minHeight="40dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/bg_kotak_aktivasi"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/aktivasi_akun"
                        android:paddingTop="12dp"
                        android:paddingLeft="14dp"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/txtInfoAkun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_akun"
                    android:layout_toRightOf="@+id/logoAktivasiAkun"
                    android:paddingLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_akun"
                    android:layout_below="@+id/txtInfoAkun"
                    android:layout_toRightOf="@+id/logoAktivasiAkun"
                    android:paddingLeft="10dp"/>
            </RelativeLayout>

                <EditText
                    android:id="@+id/rekening"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/rekening"
                    android:textColor="#727FA3"
                    android:background="@drawable/bg_kotak_login"
                    android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/idUserr"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/IDpengguna"
                android:textColor="#727FA3"
                android:background="@drawable/bg_kotak_login"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/kata_sandi"
                android:background="@drawable/bg_kotak_login"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/kata_sandi_fix"
                android:background="@drawable/bg_kotak_login"
                android:layout_marginBottom="40dp"/>
            
            <Button
                android:id="@+id/selanjutnya"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/selanjutnya"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>