<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="Login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtKetLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:paddingTop="5dp"
        android:paddingBottom="20dp"
        android:text="Silahkan masukkan username dan password terdaftar Anda untuk melakukan login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogin" />

    <androidx.cardview.widget.CardView
        android:id="@+id/containerKotak"
        android:layout_width="335dp"
        android:layout_height="276dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtKetLogin"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/edtLogin"
            android:layout_width="305dp"
            android:layout_height="48dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_kotak_login"
            android:fontFamily="@font/roboto"
            android:hint="@string/username"
            android:textColor="#727FA3"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="305dp"
            android:layout_height="48dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="93dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_kotak_login"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#727FA3"/>

        <TextView
            android:id="@+id/txtNotesPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="140dp"
            android:text="Password tidak sesuai"
            android:textColor="@color/red"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/btnMasuk"
            android:layout_width="305dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="176dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_button_masuk"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/masuk"
            android:enabled="false"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBiometric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/containerKotak"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerKotak"
        app:layout_constraintVertical_bias="0">
        
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="54dp"
            android:minHeight="54dp">
            
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/login_biometric"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_login_biometric"/>
        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtLupaPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="Lupa Username / Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvBiometric" />

    <ImageView
        android:id="@+id/logoBi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLupaPass"
        app:layout_constraintVertical_bias="0.65999997" />

    <RelativeLayout
        android:id="@+id/kotakInfoAkun"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="@drawable/bg_kotak_user"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/frameProfil"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:src="@drawable/profil" />
        </FrameLayout>

        <TextView
            android:id="@+id/idUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/frameProfil"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/IDpengguna" />

        <TextView
            android:id="@+id/rekeningUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idUser"
            android:layout_toRightOf="@+id/frameProfil"
            android:paddingLeft="10dp"
            android:text="@string/rekening" />
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ojk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/logoBi"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtLupaPass"
        app:layout_constraintVertical_bias="0.68" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/lps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toEndOf="@+id/logoBi"
        app:layout_constraintTop_toTopOf="@id/txtLupaPass"
        app:layout_constraintVertical_bias="0.68" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/ket_bank"
        android:paddingTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoBi" />

</androidx.constraintlayout.widget.ConstraintLayout>